# sp26-gke-social-media

./: .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  Makefile  README.md  REFACTOR.md  pixi.toml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: chore.yml  ci.yml
cloud/: README.md  config.auto.tfvars  main.tf  outputs.tf  providers.tf  variables.tf
cloud/docker/: gke-dummy.Dockerfile  sentiment-agent.Dockerfile
cloud/k8s/dummy-workflow/: cronjob.yaml  job.yaml
cloud/k8s/redis/: deployment.yaml  service.yaml
cloud/k8s/sentiment-agent/: cronjob.yaml  job.yaml  rbac.yaml
dashboard/: README.md  package-lock.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentTopology.tsx  DebateFeed.tsx  InputMode.tsx  LiveRunMode.tsx  MetricsPanel.tsx
dashboard/src/services/: MockDataLayer.ts
dev/: README.md
docs/: DESIGN.md  README.md
secrets/: secrets.sops.yaml
sp26_gke/: __init__.py  dummy.py
sp26_gke/workflows/: __init__.py  gke_dummy_job.py  judge.py  llm.py  orchestrator.py  prompts.py  redis_state.py  research_agent.py  researcher.py  schemas.py  search.py  sentiment_agent.py  summarizer.py  synthesizer.py  worker.py
tests/: test_dummy.py  test_gke_dummy_job.py
